# nano_banana_hackathon

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
docs/: api-reference.md  examples.md  getting-started.md  index.md
docs/about/: about.md
docs/overrides/: main.html
src/demo_google_api/: test_1.py
src/demo_google_api/examples/: gradio_demo.py  multiple_image_example.py  single_image_example.py
src/demo_google_api/examples/outputs/: session_20250907_161726.json  session_20250907_165430.json  session_20250907_165614.json  session_20250907_171517.json  session_20250907_171609.json  session_20250907_171740.json  session_20250907_171837.json  session_20250907_172654.json  session_20250907_172739.json
src/utils/: image_concat.py
